--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+
 !**/src/main/**/target/
 !**/src/test/**/target/
 !mvnw
@@ -35,3 +35,4 @@ build/
 ### VS Code ###
 .vscode/
 /.mvn/
+/.mvn/wrapper/
