--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ams
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.default_schema=ams
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+## Generate the schema
+#spring.jpa.hibernate.ddl-auto=create
